test/tests/stages/13_floating-point_numbers/valid/function_calls/return_double.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[29]:
  double
  identifier(d)
  (
  void
  )
  {
  return
  const double(1234.e75)
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  double
  identifier(retval)
  =
  identifier(d)
  (
  )
  ;
  return
  identifier(retval)
  ==
  const double(1234.e75)
  ;
  }
