test/tests/stages/13_floating-point_numbers/invalid_parse/invalid_type_specifier.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[16]:
  int
  identifier(main)
  (
  void
  )
  {
  unsigned
  double
  identifier(d)
  =
  const double(10.0)
  ;
  return
  const int(0)
  ;
  }
